adiciona página de login com autenticação do Google e configurações do Firebase; atualiza checklist para exibir e-mails formatados

--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
                 <div class="tool-header" id="designgen">
                     <h2 class="tool-title">Ferramenta em Construção</h2>
                     <p class="tool-description">Esta ferramenta está em fase de desenvolvimento</p>
-                    <a href="#" class="tool-button">Em Breve</a>
+                    <a href="https://docs.google.com/spreadsheets/d/1nCth0ODdX8kZ2n6qTJzJruj6jqOOZvMoHXuNoZ-nzrQ/edit?usp=sharing" class="tool-button" target="_blank" rel="noopener noreferrer">Em Breve</a>
                 </div>
             </div>
         </div>
