adiciona menu dinâmico com carregamento assíncrono e estilização; ajusta layout para compatibilidade com o menu

--- a/pages/checklist.html
+++ b/pages/checklist.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Cobrança para UBS</title>
     <link rel="stylesheet" href="../assets/css/checklist.css">
+    <div id="menu"></div>
 </head>
 <body>
     <h1>Gerador de Cobrança para UBS</h1>
