--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,9 +9,9 @@
 <body>
     <div class="menu-container">
         <ul class="menu">
-            <li class="menu-item" data-color="primary">Início</li>
+            <li class="menu-item" data-color="primary"><a href="../index.htm">Início</a></li>
             <li class="menu-item" data-color="secondary">Produtos</li>
-            <li class="menu-item" data-color="tertiary">Serviços</li>
+            <li class="menu-item" data-color="tertiary">CheckList</li>
             <li class="menu-item" data-color="quaternary">Sobre</li>
             <li class="menu-item" data-color="quinary">Contato</li>
             <li class="menu-item" data-color="senary">Blog</li>
