Atualiza estilo do item marcado na checklist

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
                 <div class="tool-header" id="imagegen">
                     <h2 class="tool-title">Lista de Contatos</h2>
                     <p class="tool-description">Acesse e gerencie sua lista de contatos facilmente</p>
-                    <a href="https://seuservidordestreamlit.com/contatos" class="tool-button">Acessar Lista</a>
+                    <a href="https://seuservidordestreamlit.com/contatos" class="tool-button">Em Breve</a>
                 </div>
             </div>
             <div class="tool-card">
@@ -37,14 +37,14 @@
                 <div class="tool-header" id="recipegen">
                     <h2 class="tool-title">Consolidador de Planilhas</h2>
                     <p class="tool-description">Consolide suas planilhas de maneira eficiente</p>
-                    <a href="https://seuservidordastreamlit.com/consolidador" class="tool-button">Consolidar Planilhas</a>
+                    <a href="http://192.168.3.6:8504/" class="tool-button" target="_blank">Consolidar Planilhas</a>
                 </div>
             </div>
             <div class="tool-card">
                 <div class="tool-header" id="musicgen">
                     <h2 class="tool-title">Envio de Mensagens com Bots</h2>
                     <p class="tool-description">Envie mensagens automaticamente usando bots inteligentes</p>
-                    <a href="https://seuservidordastreamlit.com/mensagens" class="tool-button">Enviar Mensagens</a>
+                    <a href="https://seuservidordastreamlit.com/mensagens" class="tool-button">Em Breve</a>
                 </div>
             </div>
             <div class="tool-card">
