--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,11 +10,11 @@
     <div class="menu-container">
         <ul class="menu">
             <li class="menu-item" data-color="primary"><a href="../index.htm">Início</a></li>
-            <li class="menu-item" data-color="secondary">Produtos</li>
-            <li class="menu-item" data-color="tertiary">CheckList</li>
-            <li class="menu-item" data-color="quaternary">Sobre</li>
-            <li class="menu-item" data-color="quinary">Contato</li>
-            <li class="menu-item" data-color="senary">Blog</li>
+            <li class="menu-item" data-color="secondary">Null</li>
+            <li class="menu-item" data-color="tertiary"><a href="../pages/checklist.html">CheckList</a></li>
+            <li class="menu-item" data-color="quaternary"><a href="http://192.168.3.6:8504/" target="_blank" rel="noopener noreferrer">Consolidador</a></li>
+            <li class="menu-item" data-color="quinary">Null</li>
+            <li class="menu-item" data-color="senary">Null</li>
         </ul>
         <div class="content">
             Selecione um item do menu para ver o conteúdo
