Atualiza estilo do item marcado na checklist e título da página principal

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreativeAI Tools</title>
+    <title>Ferramentas - Sala de Situação</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <div id="menu"></div>
 </head>
@@ -20,7 +20,7 @@
         <div class="tool-grid">
             <div class="tool-card">
                 <div class="tool-header" id="imagegen">
-                    <h2 class="tool-title">Lista de Contatos</h2>
+                    <h2 class="tool-title">Lista de<br> Contatos</h2>
                     <p class="tool-description">Acesse e gerencie sua lista de contatos facilmente</p>
                     <a href="https://seuservidordestreamlit.com/contatos" class="tool-button">Em Breve</a>
                 </div>
