Atualiza estilo do item marcado na checklist e título da página principal

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
                 <div class="tool-header" id="videogen">
                     <h2 class="tool-title">Ferramentas de Verificação</h2>
                     <p class="tool-description">Utilize nossas ferramentas para verificar informações com precisão</p>
-                    <a href="pages/checklist.html" class="tool-button">Verificar Agora</a>
+                    <a href="/pages/checklist/checklist.html" class="tool-button">Acessar</a>
                 </div>
             </div>
             
@@ -37,14 +37,14 @@
                 <div class="tool-header" id="recipegen">
                     <h2 class="tool-title">Consolidador de Planilhas</h2>
                     <p class="tool-description">Consolide suas planilhas de maneira eficiente</p>
-                    <a href="http://192.168.3.6:8504/" class="tool-button" target="_blank">Consolidar Planilhas</a>
+                    <a href="http://192.168.3.6:8504/" class="tool-button" target="_blank">Acessar</a>
                 </div>
             </div>
             <div class="tool-card">
                 <div class="tool-header" id="musicgen">
                     <h2 class="tool-title">Envio de Mensagens com Bots</h2>
-                    <p class="tool-description">Envie mensagens automaticamente usando bots inteligentes</p>
-                    <a href="https://seuservidordastreamlit.com/mensagens" class="tool-button">Em Breve</a>
+                    <p class="tool-description">Envie mensagens automaticamente usando bots no Google Spaces</p>
+                    <a href="/pages/bot_spaces/bot.html" class="tool-button">Acessar</a>
                 </div>
             </div>
             <div class="tool-card">
