--- a/pages/checklist/checklist.html
+++ b/pages/checklist/checklist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Cobrança para UBS</title>
-    <link rel="stylesheet" href="../assets/css/checklist.css">
+    <link rel="stylesheet" href="/pages/checklist/checklist.css">
     <div id="menu"></div>
 </head>
 <body>
@@ -108,6 +108,6 @@
         </div>
     </div>
 
-    <script src="../assets/js/checklist.js"></script>
+    <script src="/pages/checklist/checklist.js"></script>
 </body>
 </html>
