--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Animado</title>
-    <link rel="stylesheet" href="../assets/css/menu.css">
+    <link rel="stylesheet" href="/pages/menu/menu.css">
 </head>
 <body>
     <div class="menu-container">
         <ul class="menu">
-            <li class="menu-item" data-color="primary"><a href="../index.htm">Início</a></li>
+            <li class="menu-item" data-color="primary"><a href="../../index.htm">Início</a></li>
             <li class="menu-item" data-color="secondary">Null</li>
-            <li class="menu-item" data-color="tertiary"><a href="../pages/checklist.html">CheckList</a></li>
+            <li class="menu-item" data-color="tertiary"><a href="/pages/checklist/checklist.html">CheckList</a></li>
             <li class="menu-item" data-color="quaternary"><a href="http://192.168.3.6:8504/" target="_blank" rel="noopener noreferrer">Consolidador</a></li>
-            <li class="menu-item" data-color="quinary">Null</li>
+            <li class="menu-item" data-color="quinary"><a href="/pages/bot_spaces/bot.html">Bot</a></li>
             <li class="menu-item" data-color="senary">Null</li>
         </ul>
         <div class="content">
@@ -21,6 +21,6 @@
         </div>
     </div>
 
-    <script src="js/menu.js"></script>
+    <script src="/pages/menu/menu.js"></script>
 </body>
 </html>
